--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,8 @@
         "jsonwebtoken": "^9.0.3",
         "mongoose": "^8.0.3",
         "nodemailer": "^7.0.12",
-        "puppeteer": "^24.35.0"
+        "puppeteer": "^24.35.0",
+        "resend": "^6.9.2"
     },
     "devDependencies": {
         "@types/bcryptjs": "^2.4.6",
